--- a/vue-siam-admin/index.html
+++ b/vue-siam-admin/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title>暹罗点餐-调度中心</title>
-  <meta http-equiv='X-UA-Compatible' content='IE=8'>
-  <meta name="renderer" content="webkit" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-</head>
-
-<body>
-  <div id="app">
-
-  </div>
-  
-  <!-- built files will be auto injected -->
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>暹罗点餐-调度中心</title><meta http-equiv=X-UA-Compatible content="IE=8"><meta name=renderer content=webkit><meta http-equiv=Content-Type content="text/html; charset=utf-8"><link rel="shortcut icon" href=/favicon.ico><link rel="shortcut icon" href=favicon.ico><link href=css/vendors~main.055bfedf.css rel=stylesheet><link href=css/main.055bfedf.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=js/vendors~main.055bfedfc1f63fd5defa.js></script><script type=text/javascript src=js/main.055bfedfc1f63fd5defa.js></script></body></html>
